# automata

./: readme.md
lexer/: CMakeLists.txt
mili-mur-mili/: CMakeLists.txt  main.cpp
mili-mur-minimize/: CMakeLists.txt
nka-to-dka/: CMakeLists.txt
rv-to-dka/: CMakeLists.txt
